@@ -59,7 +59,7 @@ LDLIBS_LIBRC = -leinfo
 RCOBJS = checkown.o env-update.o fstabinfo.o mountinfo.o \
 		 rc-depend.o rc-plugin.o rc-status.o rc-update.o runscript.o \
 		 start-stop-daemon.o rc.o
-LDLIBS_RC = $(LDLIBS_LIBRC) -lrc
+LDLIBS_RC = $(LDLIBS_LIBRC) -lrc -lutil
 
 LIB_TARGETS = $(LIBEINFOSO) $(LIBRCSO)
 SBIN_TARGETS = rc
